<resources>
    <string name="app_name">OptiQuery</string>
    <string name="optiquery_title">OptiQuery</string>
    <string name="please_enter_associated_domain">Please enter the domain you are associated with</string>
    <string name="copyright">Copyright &#169; 2017 ImplementHIT. All rights reserved.</string>
    <string name="action_settings">Settings</string>
    <string name="image_content_description">Image Content Description</string>
    <string name="please_sign_in">Please sign in with your OptimizeHIT Account</string>
    <string name="please_fill_for_reset">Please fill the form to reset your password</string>
    <string name="domain_hint">Domain</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="verifying_session">Verifying Session</string>
    <string name="logging_in">Loggin in</string>
    <string name="loading_solution">Loading Solution</string>
    <string name="loading_peers">Loading Favorites</string>
    <string name="loading_dashboard">Loading Dashboard</string>
    <string name="loading_support">Loading Support</string>
    <string name="loading_speech">Loading Speech</string>
    <string name="thanks_for_feedback">Thank you for your feedback.</string>
    <string name="removing_favorite">Removing Favorite</string>
    <string name="invalid_credentials">Invalid Credentials! Please try again.</string>
    <string name="login_failed">Login Failed</string>
    <string name="all_fields_required">All the fields are required!</string>
    <string name="ok">Ok</string>
    <string name="ok_semi_lowercase">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_string"></string>
    <string name="loading_suggestions">Loading Suggestions</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="please_type_comment">Please type in your comments below.</string>
    <string name="feedback_min_5_letters">Feedback has to have at least 5 characters</string>
    <string name="send">Send</string>
    <string name="refresh_solutions">Refreshing Solutions</string>
    <string name="sending_feedback">Sending Feedback</string>
    <string name="try_again">Try Again</string>
    <string name="browse_for_solutions">Browse for Solutions</string>
    <string name="no_result_found">No results were found for your search, \"TOKEN\" please try again.</string>
    <string name="speech_failure">Failed to synthesize speech</string>
    <string name="speech_error">Speech Error</string>
    <string name="go_back_responses">Go back to responses</string>
    <string name="feedback_sent">Feedback Sent</string>
    <string name="no_data_to_display">No data to display for this view</string>
    <string name="search_for_solutions">Search for Solutions</string>
    <string name="please_try_again">The OptimizeHIT servers are not reachable.\nPlease check if you are connected to the internet.\n\nIf this is a recurring issue please press the diagnostics button in the Support section of this app.</string>
    <string name="title_just_fail">No Internet</string>
    <string name="no_solution">No solution</string>
    <string name="no_favorites_added">You haven\'t added any favorites yet</string>
    <string name="no_history">No solutions viewed yet</string>
    <string name="no_solution_found">No solution found</string>
    <string name="searching">Start Searching&#8230;</string>
    <string name="keep_logged_in">Keep me logged in:</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="optimizehit_com">.optimizehit.com</string>
    <string name="voice_search">Voice Search</string>
    <string name="ask_naturally">Ask questions naturally</string>
    <string name="categories">Categories</string>
    <string name="unknown_category">Unknown Category</string>
    <string name="subcategories">Subcategories</string>
    <string name="solutions">Solutions</string>
    <string name="solution">Solution</string>
    <string name="results">Results</string>
    <string name="favorites">Favorites</string>
    <string name="peer_favorites">Peer Favorites</string>
    <string name="voice_history">Voice History</string>
    <string name="browse_history">Browse History</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="dashboard">Dashboard</string>
    <string name="explore_icd_10">Explore ICD-10</string>
    <string name="find_the_code">Find The Code</string>
    <string name="support">Support</string>
    <string name="optiquery_tm">OptiQuery&#8482;</string>
    <string name="click_to_start">Click to Start</string>
    <string name="please_speek_beep">Please speak after the beep</string>
    <string name="delete">Delete</string>
    <string name="exit_full_screen">Exit Full Screen</string>
    <string name="like">Like</string>
    <string name="liked_solutions">Liked Solutions</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="liked">Liked</string>
    <string name="feedback">Feedback</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">In Favorites</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other&#8230;</string>
    <string name="solution_wrong_category">Solution in wrong category</string>
    <string name="solution_inaccurate">Solution\'s content is inaccurate</string>
    <string name="lang_pres_issue">Language/Presentation Issue</string>
    <string name="help_improve_content">Help us improve our content</string>
    <string name="select_default">Select Your default view</string>
    <string name="history">History</string>
    <string name="default_screen">Default Screen</string>
    <string name="auto_start">Auto Start</string>
    <string name="reading_speed">Reading Speed</string>
    <string name="play_sample">Play Sample</string>
    <string name="pause_sample">Pause Sample</string>
    <string name="stop_sample">Stop Sample</string>
    <string name="choose_the_default">Choose the default screen to show when opening the app</string>
    <string name="text_to_speech">TEXT TO SPEECH</string>
    <string name="networking">NETWORKING</string>
    <string name="permissions">PERMISSIONS</string>
    <string name="submit_ticket">Submit Ticket</string>
    <string name="submit_a_ticket">Submit a Ticket</string>
    <string name="submitting_ticket">Submitting Ticket</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="subject">Subject</string>
    <string name="describe_issue">Describe Issue</string>
    <string name="connected_to_the_internet">Connected to the Internet</string>
    <string name="optimizehit_servers_reachable">OptimizeHIT Servers Reachable</string>
    <string name="access_to_the_microphone">Access to the Microphone</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="location_services">Location Services</string>
    <string name="suggested_solutions">Suggested Solutions</string>
    <string name="settings">Settings</string>
    <string name="settings_capitalized">SETTINGS</string>
    <string name="input_question">Type in a question</string>
    <string name="query">Query</string>
    <string name="browse">Browse</string>
    <string name="popular_questions">Popular Questions</string>
    <string name="processing">Processing&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="solution_library">Solution Library</string>
    <string name="ibm_watson">IBM Watson</string>
    <string name="suggestions_all">All</string>
    <string name="based_on_current_location">Based on your current location</string>
    <string name="reactivation_qiuck_overview">Reactivation: Quick overview to refresh your memory</string>
    <string name="suggestions">Suggestions</string>
    <string name="sorry_no_suggestions_yet">Sorry no suggestions yet. Continue using the app to start generating suggestions.</string>
    <string name="suggestions_location_based">Location based</string>
    <string name="request_failed">Failed to send request</string>
    <string name="request_succeed">Request sent successfully</string>
    <string name="sending_request">Sending request</string>
    <string name="subordiante_codes">Sub-ordinate Codes</string>
    <string name="corresponding_icd9">Corresponding ICD-9 Codes</string>
    <string name="documentation_guidance">Documentation Guidance</string>
    <string name="determining_icd9">* ICD-9 codes determined using CMS GEMS Mapping.</string>
    <string name="add_to_superbill_question">Add to Superbill?</string>
    <string name="create_group">Create New&#8230;</string>
    <string name="name_new_group">Name your new Group</string>
    <string name="move_to_group">Move to Group&#8230;</string>
    <string name="add_to_superbill_group">Add to Superbill Group</string>
    <string name="add_to_main_superbill">Add to main Superbill list</string>
    <string name="do_you_want_add_to_superbill">Do you want to add \"%s\" to your superbill ?</string>
    <string name="already_in_superbill">Already in your Superbill&#8230;</string>
    <string name="code_is_already_in_superbill">This code is already in your Superbill, if you wish to remove it, you can do that from within your superbill.</string>
    <string name="this_is_billable_code">This is a billable code, denoted by the $ sign. No further sub-ordinate code exist.</string>
    <string name="back">Back</string>
    <string name="remove_superbill">Remove from Superbill</string>
    <string name="explore">Explore</string>
    <string name="what_you_like_to_do">What would you like to do?</string>
    <string name="no_superbill_found">No items found in your superbill</string>
    <string name="no_superbill_result_found">No results found for your search</string>
    <string name="no_results_found">No results found</string>
    <string name="documentation_points">DOCUMENTATION POINTS</string>
    <string name="relevant_documentation">RELEVANT DOCUMENTATION</string>
    <string name="case_example">CASE EXAMPLE</string>
    <string name="case_example_codes">CASE EXAMPLE ICD-10 CODES</string>
    <string name="superbills">SUPERBILLS</string>
    <string name="no_notifications_found">No notifications found</string>
    <string name="enable_grouping">Enable Grouping</string>
    <string name="hide_grouping_disabled_message">Hide grouping disabled message</string>
    <string name="grouping_is_disabledd">Grouping is disabled. Open settings to enable.</string>
    <string name="group">Group: </string>
    <string name="your_session_has_expired">Your account was used on another device to sign in.\n\nAn account can only remain signed in on one device at a time.</string>
    <string name="session_expired">Session Closed</string>
    <string name="select_a_group">Select a Group</string>
    <string name="add">Add</string>
    <string name="group_name_cannot_blank">Group Name cannot be blank</string>
    <string name="name_group">Name your new Group</string>
    <string name="copied_to_clipboard">The diagnostic information has been copied into your clipboard. Please paste the info into the ticket if you are creating one.</string>
    <string name="find_billable">Find billable \ncodes only </string>
    <string name="above_info_automatically_added">The above diagnostic information is automatically added to the ticket you submit</string>
    <string name="icon_exclamation">\ue809</string>
    <string name="icon_search">&#xf12d;</string>
    <string name="icon_cancel_circled_dark">&#xf107;</string>
    <string name="icon_info">&#xf118;</string>
    <string name="icon_question">&#xf116;</string>
    <string name="library">Library</string>
    <string name="opti_query">OptiQuery</string>
</resources>