<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:scrollbars="none"
	android:overScrollMode="never">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:background="@drawable/dialog_shadow">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:padding="25dp"
			android:background="@color/background_white"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="@dimen/feedback_margins"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/icon_question"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:layout_marginEnd="5dp"
					android:text="@string/icon_question"
					android:textColor="@color/text_blue"
					android:textSize="20sp"/>

				<TextView
					android:id="@+id/title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/send_feedback"
					android:textSize="20sp"/>

			</LinearLayout>

			<TextView
				android:id="@+id/message"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/please_type_comment"
				android:paddingTop="10dp"
				android:paddingBottom="15dp"
				android:gravity="center"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="2">

				<Button
					android:id="@+id/yes"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_marginRight="5dp"
					android:layout_marginEnd="5dp"
					android:text="@string/yes"
					android:textColor="@color/text_white"
					android:background="@drawable/rounded_rect_green"
					android:textAllCaps="false"/>

				<Button
					android:id="@+id/no"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dp"
					android:layout_marginStart="5dp"
					android:layout_weight="1"
					android:text="@string/no"
					android:textColor="@color/text_white"
					android:background="@drawable/rounded_rect_red"
					android:textAllCaps="false"/>

			</LinearLayout>

		</LinearLayout>

	</RelativeLayout>

</ScrollView>