<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
	android:overScrollMode="never">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:background="@drawable/dialog_shadow">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:padding="25dp"
			android:orientation="vertical"
			android:background="@color/background_white" >

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:paddingTop="@dimen/feedback_margins"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/icon"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:layout_marginEnd="5dp"
					android:text="@string/icon_info"
					android:textColor="@color/text_blue"
					android:textSize="20sp"/>

				<TextView
					android:id="@+id/title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/send_feedback"
					android:textSize="20sp" />

			</LinearLayout>

			<TextView
				android:id="@+id/message"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/please_type_comment"
				android:paddingTop="10dp"
				android:paddingBottom="15dp"
				android:gravity="center" />

			<Button
				android:id="@+id/ok"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/ok"
				android:textColor="@color/text_white"
				android:background="@drawable/rounded_rect_orange"
				android:textAllCaps="false" />

		</LinearLayout>

	</RelativeLayout>

</ScrollView>