<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/feedback_margins"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/cancel"
		android:textSize="@dimen/feedback_menu_item_font"
		android:textColor="@color/background_blue"
		android:background="@drawable/feedback_rounded_rect"
        android:textAllCaps="false" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cancel"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/feedback_margins"
		android:background="@drawable/feedback_rounded_rect" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/feedback_margins"
                android:text="@string/help_improve_content"
                android:textColor="@color/text_light_grey" />
            
        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_box_divider"
			android:textColor="@color/text_blue" />
        
        <Button
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_menu_item_height"
            android:background="@android:color/transparent"
            android:text="@string/try_again"
            android:textSize="@dimen/feedback_menu_item_font"
			android:textColor="@color/text_blue"
            android:textAllCaps="false" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_box_divider" />
        
        <Button
            android:id="@+id/browse_for_solutions"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_menu_item_height"
            android:background="@android:color/transparent"
            android:text="@string/browse_for_solutions"
            android:textSize="@dimen/feedback_menu_item_font"
			android:textColor="@color/text_blue"
            android:textAllCaps="false" />
        
    </LinearLayout>
    
</RelativeLayout>