<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/feedback_margins"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/cancel"
		android:textSize="@dimen/feedback_menu_item_font"
		android:textColor="@color/background_blue"
		android:background="@drawable/feedback_rounded_rect"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cancel"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/feedback_margins"
		android:background="@drawable/feedback_rounded_rect" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/feedback_margins"
                android:text="@string/select_default"
                android:textColor="@color/text_light_grey" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_box_divider"
			android:textColor="@color/text_blue" />

        <Button
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_menu_item_height"
            android:background="@android:color/transparent"
            android:text="@string/dashboard"
            android:textSize="@dimen/feedback_menu_item_font"
			android:textColor="@color/text_blue"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_box_divider" />

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_menu_item_height"
            android:background="@android:color/transparent"
            android:text="@string/library"
            android:textSize="@dimen/feedback_menu_item_font"
			android:textColor="@color/text_blue"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_box_divider" />

        <Button
            android:id="@+id/opti_query"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_menu_item_height"
            android:background="@android:color/transparent"
            android:text="@string/opti_query"
            android:textSize="@dimen/feedback_menu_item_font"
			android:textColor="@color/text_blue"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/login_box_divider" />

        <!--<Button-->
            <!--android:id="@+id/find_the_code"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/feedback_menu_item_height"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:text="@string/find_the_code"-->
            <!--android:textSize="@dimen/feedback_menu_item_font"-->
            <!--android:textColor="@color/text_blue"-->
            <!--android:textAllCaps="false" />-->


    </LinearLayout>

</RelativeLayout>